# artome

./: README.md  Ressources.qrc  cmakecomand.txt
CampaignAnalysis/: CMakeLists.txt  TextView.cpp  TextView.h  TextView.ui  buildhistogram.cpp  buildhistogram.h  buildhistogram.ui  buildsurfaceplot.cpp  buildsurfaceplot.h  buildsurfaceplot.ui  builtcolorscheme.cpp  builtcolorscheme.h  builtcolorscheme.ui  channelwindow.cpp  channelwindow.h  channelwindow.ui  configplotwidget.cpp  configplotwidget.h  configplotwidget.ui  databases.cpp  databases.h  databases.ui  defineevents.cpp  defineevents.h  defineevents.ui  definingscreens.cpp  definingscreens.h  definingscreens.ui  derivedplot.cpp  derivedplot.h  derivedplot.ui  downloaditensthread.cpp  downloaditensthread.h  editlocalplots.cpp  editlocalplots.h  editlocalplots.ui  hdpifactores.cpp  hdpifactores.h  hdpifactores.ui  help.cpp  (+56 more)
CampaignMonitoring/: CMakeLists.txt  CMakeLists.txt.user.3409e36  CMakeLists.txt.user.3faa49f  CMakeLists.txt.user.820b41a  CMakeLists.txt.user.9014057  CMakeLists.txt.user.be30983  definerunlayouts.cpp  definerunlayouts.h  definerunlayouts.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
CampaignMonitoring/MonitoringSlave/: CMakeLists.txt  CMakeLists.txt.user.3faa49f  main.cpp
DbAPI/: dbapi.cpp  dbapi.h
EditHtmlEntries/: CMakeLists.txt  CMakeLists.txt.user.3faa49f  CMakeLists.txt.user.820b41a  Textedit.cpp  Textedit.h  addnewentry.cpp  addnewentry.h  addnewentry.ui  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  maketext.cpp  maketext.h  maketext.ui
GslWrapper/: gslkindofwrapper.cpp  gslkindofwrapper.h
Icons/: .directory
PLottingFramework/: gslwrapper.cpp  gslwrapper.h  histodata.cpp  histodata.h  histoproprieties.cpp  histoproprieties.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plotproprieties.cpp  plotproprieties.h  plotting.cpp  plotting.h  plplot_utils.cpp  plplot_utils.h  xydata.cpp  xydata.h  xyproprieties.cpp  xyproprieties.h  xyzdata.cpp  xyzdata.h  xyzproprieties.cpp  xyzproprieties.h
helps/: chwindows.html  formulahelp.html  msdsvhelp.html
plplot-plplot-95bf7ebfe56154dda5fd4301a3ab7927848a7623/cmake/modules/: qt.cmake
plplot-plplot-95bf7ebfe56154dda5fd4301a3ab7927848a7623/src/: CMakeLists.txt
